compiler/testData/diagnostics/tests/DeferredTypes.fir.kt
interface T {
  val a = <!PROPERTY_INITIALIZER_IN_INTERFACE!><!UNRESOLVED_REFERENCE!>Foo<!>.bar()<!>
}
